window 계산기 완성

--- a/calculator2/index.html
+++ b/calculator2/index.html
@@ -62,6 +62,7 @@
       <aside id="history_container">
         <h1 id="history_record">기록</h1>
         <ul id="history_list"></ul>
+        <div id="history_delete">🗑️</div>
       </aside>
     </main>
   </body>
